fix: not using px unit now

--- a/example/storybook/src/components/Others/Fab/index.stories.mdx
+++ b/example/storybook/src/components/Others/Fab/index.stories.mdx
@@ -349,7 +349,7 @@ Icons can be used inside Fab component.
     showArgsController={false}
     metaData={{
       code: `
-      <Box sx={{h:'380px', w:'386px', borderColor:'$trueGray300', borderRadius:'8px', borderWidth:'1px', borderStyle:'solid'}} py={56} px={24}>
+      <Box h={380} w={386} borderColor='$trueGray300' borderRadius={8} borderWidth={1} borderStyle='solid' py={56} px={24}>
         <Fab bg="#4F46E5" height="$9" width={93} p="$0" position="absolute" top={16}>
           <SearchIcon/>
           <Fab.Label fontSize="$sm" color="$trueGray50" width="$12">Search</Fab.Label>
