--- a/example/storybook/src/components/Forms/Checkbox/index.stories.mdx
+++ b/example/storybook/src/components/Forms/Checkbox/index.stories.mdx
@@ -14,7 +14,14 @@ import { Meta } from '@storybook/addon-docs';
 
 <Meta title="components/Forms/Checkbox" />
 
-import { Checkbox, CheckIcon, Icon, Text, MinusIcon } from './Checkbox';
+import {
+  Checkbox,
+  CheckIcon,
+  Icon,
+  Text,
+  MinusIcon,
+  Heading,
+} from './Checkbox';
 import { Center, VStack, Text as CheckboxText, HStack } from './Checkbox';
 import { transformedCode } from '../../../utils';
 import {
@@ -398,7 +405,7 @@ The following are the lists of all the libraries and packages the component reli
 
 The Examples section provides visual representations of the different variants of the component, allowing you to quickly and easily determine which one best fits your needs. Simply copy the code and integrate it into your project.
 
-### Checkbox
+#### Checkbox
 
 <AppProvider>
   <CodePreview
@@ -458,9 +465,7 @@ The Examples section provides visual representations of the different variants o
 <VStack space="md">
  <Checkbox justifyContent='left' isChecked={true} >
   <Checkbox.Indicator bgColor="#005DB4" >
-    <Checkbox.Icon>
-      <Icon as={CheckIcon} />
-    </Checkbox.Icon>
+   <CheckIcon color="white"/>
   </Checkbox.Indicator>
   <Checkbox.Label>Framer</Checkbox.Label>
 </Checkbox>
@@ -511,9 +516,7 @@ The Examples section provides visual representations of the different variants o
 </Checkbox>
 <Checkbox isChecked={true}>
   <Checkbox.Indicator bgColor="#005DB4">
-    <Checkbox.Icon >
-        <Icon as={CheckIcon} color="$red500"/>
-    </Checkbox.Icon>
+   <CheckIcon color="white"/>
   </Checkbox.Indicator>
    <Checkbox.Label>Animation</Checkbox.Label>
 </Checkbox>
@@ -550,21 +553,33 @@ The Examples section provides visual representations of the different variants o
     showArgsController={false}
     metaData={{
       code: `
-      <HStack >
-     
+      <VStack>
+      <HStack>
+<Checkbox >
+ <Checkbox.Indicator bgColor="#005DB4">
+      <CheckIcon color="white" />
+    </Checkbox.Indicator>
+   <Checkbox.Label>Design</Checkbox.Label>
+</Checkbox>
+</HStack>
+
+<HStack>
+<Text size="xs" ml="35px">Subscribe to updates from the Design Feed</Text></HStack>
+      <VStack>
+      <HStack>
 <Checkbox >
   <Checkbox.Indicator>
-    <Checkbox.Icon>
-        <Icon as={CheckIcon} />
+   <Checkbox.Icon>
+      <Icon as={CheckIcon} />
     </Checkbox.Icon>
   </Checkbox.Indicator>
-  <VStack space="md">
-   <Checkbox.Label>Design</Checkbox.Label>
-   <Text size="xs" >Subscibe to updates from the Design Feed</Text>
-   </VStack>
+   <Checkbox.Label>Marketing</Checkbox.Label>
 </Checkbox>
-
 </HStack>
+
+<HStack>
+<Text size="xs" ml="35px">Subscribe to updates from the Marketing Feed</Text></HStack></VStack>
+</VStack>
 `,
       transformCode: (code) => {
         return transformedCode(code);
@@ -576,7 +591,7 @@ The Examples section provides visual representations of the different variants o
         Checkbox,
         HStack,
         VStack,
-        Text
+        Text,
       },
       argsType: {},
     }}
@@ -592,26 +607,22 @@ The Examples section provides visual representations of the different variants o
     metaData={{
       code: `
       <HStack space="md">
-     
-<Checkbox >
-  <Checkbox.Indicator>
+
+<Checkbox  >
+<Checkbox.Indicator>
     <Checkbox.Icon>
-        <Icon as={CheckIcon} />
+      <Icon as={CheckIcon} />
     </Checkbox.Icon>
   </Checkbox.Indicator>
 </Checkbox>
 <Checkbox>
   <Checkbox.Indicator bgColor="#005DB4" >
-    <Checkbox.Icon  >
-        <Icon as={CheckIcon} />
-    </Checkbox.Icon>
+   <CheckIcon color="white"/>
   </Checkbox.Indicator>
 </Checkbox>
 <Checkbox>
-  <Checkbox.Indicator>
-    <Checkbox.Icon>
-        <Icon as={MinusIcon} />
-    </Checkbox.Icon>
+  <Checkbox.Indicator bgColor="#005DB4">
+   <MinusIcon color="white"/>
   </Checkbox.Indicator>
 </Checkbox>
 </HStack>
@@ -632,7 +643,173 @@ The Examples section provides visual representations of the different variants o
   />
 </AppProvider>
 
-### Form Control
+#### Form Control
+
+<AppProvider>
+  <CodePreview
+    showComponentRenderer={true}
+    showArgsController={false}
+    metaData={{
+      code: `
+<VStack alignItems="center">
+<VStack  alignContent='flex-start'>
+<Text size="lg">Sign up for newsletters</Text>
+
+<Checkbox justifyContent="left">
+  <Checkbox.Indicator>
+    <Checkbox.Icon>
+      <CheckIcon />
+    </Checkbox.Icon>
+  </Checkbox.Indicator>
+  <Checkbox.Label>Daily Bits</Checkbox.Label>
+</Checkbox>
+<Checkbox justifyContent="left">
+  <Checkbox.Indicator>
+    <Checkbox.Icon>
+      <CheckIcon />
+    </Checkbox.Icon>
+  </Checkbox.Indicator>
+  <Checkbox.Label>Event Updates</Checkbox.Label>
+</Checkbox>
+<Checkbox justifyContent="left">
+  <Checkbox.Indicator>
+    <Checkbox.Icon>
+      <CheckIcon />
+    </Checkbox.Icon>
+  </Checkbox.Indicator>
+  <Checkbox.Label>Sponsorhip</Checkbox.Label>
+</Checkbox>
+<Text size="sm" color="#737373">
+  Subscibe to newsletters for updates
+</Text>
+
+</VStack>
+
+</VStack>
+`,
+      transformCode: (code) => {
+        return transformedCode(code);
+      },
+      scope: { Checkbox, Wrapper, Center, CheckIcon, Icon, Text, VStack },
+      argsType: {},
+    }}
+  />
+</AppProvider>
+
+#### Label left
+
+<AppProvider>
+  <CodePreview
+    showComponentRenderer={true}
+    showArgsController={false}
+    metaData={{
+      code: `
+<VStack space="md">
+ <Checkbox justifyContent='right'   >
+ <HStack space="lg">
+    <Checkbox.Label>Jane Cooper</Checkbox.Label>
+     <Checkbox.Indicator>
+    <Checkbox.Icon>
+      <Icon as={CheckIcon} />
+    </Checkbox.Icon>
+  </Checkbox.Indicator>
+
+ </HStack>
+ 
+</Checkbox>
+ <Checkbox justifyContent='right' isChecked={true} >
+ <HStack space="lg">
+    <Checkbox.Label>Wade Warren </Checkbox.Label>
+     <Checkbox.Indicator bgColor="#005DB4" >
+   <CheckIcon color="white"/>
+  </Checkbox.Indicator>
+
+ </HStack>
+ </Checkbox>
+ <Checkbox justifyContent='right' >
+ <HStack space="lg">
+    <Checkbox.Label>Robert Fox</Checkbox.Label>
+   <Checkbox.Indicator>
+    <Checkbox.Icon>
+      <Icon as={CheckIcon} />
+    </Checkbox.Icon>
+  </Checkbox.Indicator>
+
+ </HStack>
+ 
+</Checkbox>
+</VStack>
+`,
+      transformCode: (code) => {
+        return transformedCode(code);
+      },
+      scope: { Checkbox, Wrapper, Center, CheckIcon, Icon, VStack,HStack },
+      argsType: {},
+    }}
+  />
+</AppProvider>
+
+#### Controlled
+
+<AppProvider>
+  <CodePreview
+    showComponentRenderer={true}
+    showArgsController={false}
+    metaData={{
+      code: `
+ <Checkbox>
+  <Checkbox.Indicator bgColor="#005DB4">
+   <CheckIcon color="white"/>
+  </Checkbox.Indicator>
+  <Checkbox.Label>Apartments</Checkbox.Label>
+</Checkbox>
+`,
+      transformCode: (code) => {
+        return transformedCode(code);
+      },
+      scope: {
+        Wrapper,
+        CheckIcon,
+        Icon,
+        Checkbox,
+        MinusIcon,
+        HStack,
+      },
+      argsType: {},
+    }}
+  />
+</AppProvider>
+
+#### Uncontrolled
+
+<AppProvider>
+  <CodePreview
+    showComponentRenderer={true}
+    showArgsController={false}
+    metaData={{
+      code: `
+ <Checkbox>
+  <Checkbox.Indicator bgColor="#005DB4">
+   <CheckIcon color="white"/>
+  </Checkbox.Indicator>
+  <Checkbox.Label>Hotels,living quarters</Checkbox.Label>
+</Checkbox>
+`,
+      transformCode: (code) => {
+        return transformedCode(code);
+      },
+      scope: {
+        Wrapper,
+        CheckIcon,
+        Icon,
+        Checkbox,
+        MinusIcon,
+        HStack,
+      },
+      argsType: {},
+    }}
+  />
+</AppProvider>
 
 #### Checkbox Sizes
 
