--- a/example/storybook/src/components/MediaAndIcons/Icon/index.stories.mdx
+++ b/example/storybook/src/components/MediaAndIcons/Icon/index.stories.mdx
@@ -37,7 +37,7 @@ import Wrapper from '../../Wrapper';
 To install the component, run the following command in your terminal. This will add the component to your project's dependencies and allow you to use it in your project.
 
 ```jsx
-npx gluestack-ui@latest add icon
+npx gluestack-ui@latest add icons
 ```
 
 ### Usage
