--- a/example/storybook/src/components/Overlay/Modal/index.stories.mdx
+++ b/example/storybook/src/components/Overlay/Modal/index.stories.mdx
@@ -59,7 +59,7 @@ function App(){
               <Modal.Backdrop />
               <Modal.Content>
                 <Modal.Header>
-                  <Heading fontSize="$md">Confirm your request</Heading>
+                  <Heading>Confirm your request</Heading>
                   <Modal.CloseButton>
                     <Icon as={CloseIcon} />
                   </Modal.CloseButton>
@@ -446,7 +446,7 @@ function App(){
         <Modal.Backdrop />
         <Modal.Content>
           <Modal.Header>
-            <Heading fontSize="$md" fontWeight="$bold">Order</Heading>
+            <Heading>Order</Heading>
              <Modal.CloseButton>
             <Icon as={CloseIcon} />
           </Modal.CloseButton>
@@ -497,14 +497,14 @@ function App(){
         <Modal.Backdrop />
         <Modal.Content>
           <Modal.Header>
-            <Heading fontSize='$md' fontWeight="$bold">Order</Heading>
+            <Heading>Order</Heading>
             <Modal.CloseButton>
             <Icon as={CloseIcon} />
           </Modal.CloseButton>
           </Modal.Header>
           <Modal.Body>
             <Center h={100}>
-              <Heading fontWeight="$bold">Second Modal</Heading>
+              <Heading>Second Modal</Heading>
             </Center>
           </Modal.Body>
           <Modal.Footer>
