fix: formatting of code

--- a/example/storybook/src/components/Others/Fab/index.stories.mdx
+++ b/example/storybook/src/components/Others/Fab/index.stories.mdx
@@ -16,9 +16,15 @@ import { Meta } from '@storybook/addon-docs';
 
 import { transformedCode } from '../../../utils';
 import {
-  Fab,
-  SearchIcon,
+  AddIcon,
   EditIcon,
+  Checkbox,
+  CheckIcon,
+  SearchIcon,
+  ShoppingIcon,
+} from './Fab';
+import {
+  Fab,
   Box,
   VStack,
   HStack,
@@ -26,10 +32,6 @@ import {
   Heading,
   Text,
   Divider,
-  AddIcon,
-  Checkbox,
-  CheckIcon,
-  ShoppingIcon,
   Image,
 } from './Fab';
 import {
