--- a/example/storybook/src/components/Others/Fab/index.stories.mdx
+++ b/example/storybook/src/components/Others/Fab/index.stories.mdx
@@ -271,7 +271,7 @@ Icons can be used inside Fab component.
             {
               uri: 'https://s3-alpha-sig.figma.com/img/e552/8b9b/c158a000f1e8c3683f5a8cfa8c3ba255?Expires=1682899200&Signature=SVH0jClqMqJJBm35ro0JNwJvXjnGS9M3x74edFcSz8YKBF4g-nn2B9mK3RNpEU~FZg7aVaF1IHZx3JLTkY-NhpjmymhzMGAkSta0a~S58wjKhsxnC83ihRiKI2ULU3ClVQq60dHiCR317wJMq8LGe95t8jHhXXeqZeeqvBhRvJjC2Psg2lw2T4fwWZe8AYgAzhrf4m~Bl4gQr9w1iKdBNUcrPwG3qRpEMnpT3Tikmz2Jf3t5HGvtA2dfCeiDflW~SATLfkpHOdIFakzvGS2EfPAYAESmrxtwlK1vDDtlWmkTKjDfKQXOS4tRFJyhtil1bxzgHQ0P6Lg9dRX6Lsw43A__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4',
               name: 'Kevin James',
-              msg: 'Hi Rachecl, What\\'s up',
+              msg: 'Hi Rachel, What\\'s up',
             },
             {
               uri: 'https://s3-alpha-sig.figma.com/img/96a1/9085/577c259d340398b71ab151a05b30af9d?Expires=1682899200&Signature=bwvrzS0-s-k6~vAptTKk6IAO~WqwrUhZ7qLOgD6~WZ1J89L0gyXcZiqd3ylk2YoMLiqQcKgFuV5KOYRMlBmRBGs7TH9hOSVpzHtZ6MGIJxBCjrcccg0-AiOr9mjiX1dnZ9l7Trck7YpsGET~87GtVpBVr-wTmrEQdo~NoEvY3WqIFnHQO1mn4sw5ACIUKpE9OBj0cjra~ZHe2pbVDWImruUffqARYBshQ9T0HXtr2Mk9WpdawTvduHREHqDHxrezvZ6xT0YkI93nZq-rsLnf~85Sd-qJnMyU6YJ2hkD4R8nfSPdr3g~d0MWZu4Pq57hIQBwhRL3MIrYr2MPWngeIqQ__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4',
