--- a/example/storybook/src/components/Others/Fab/index.stories.mdx
+++ b/example/storybook/src/components/Others/Fab/index.stories.mdx
@@ -587,7 +587,7 @@ Icons can be used inside Fab component.
               READ MORE
             </Text>
           </VStack>
-          <Fab bg='$pink600' size='md' right='$4' bottom='$20'>
+          <Fab bg='$pink600' size='lg' right='$4' bottom='$20'>
             <ShoppingIcon/>
           </Fab>
         </Box>
