--- a/example/storybook/src/components/Forms/Checkbox/index.stories.mdx
+++ b/example/storybook/src/components/Forms/Checkbox/index.stories.mdx
@@ -14,15 +14,14 @@ import { Meta } from '@storybook/addon-docs';
 
 <Meta title="components/Forms/Checkbox" />
 
+import { Checkbox, CheckIcon, Icon, Text, MinusIcon } from './Checkbox';
 import {
-  Checkbox,
-  CheckIcon,
-  Icon,
-  Text,
-  MinusIcon,
+  Center,
+  VStack,
+  Text as CheckboxText,
+  HStack,
   Heading,
 } from './Checkbox';
-import { Center, VStack, Text as CheckboxText, HStack } from './Checkbox';
 import { transformedCode } from '../../../utils';
 import {
   AppProvider,
@@ -434,7 +433,7 @@ The Examples section provides visual representations of the different variants o
         size: {
           control: 'select',
           options: ['sm', 'md', 'lg'],
-          default: 'md',
+          default: 'lg',
         },
         borderRadius: {
           control: 'select',
@@ -465,13 +464,13 @@ The Examples section provides visual representations of the different variants o
     metaData={{
       code: `
 <VStack space="md">
- <Checkbox justifyContent='left' isChecked={true} >
+ <Checkbox justifyContent='left' defaultIsChecked size="lg">
   <Checkbox.Indicator bgColor="#005DB4" >
-   <CheckIcon color="white"/>
-  </Checkbox.Indicator>
+ <Icon as={CheckIcon} color="#FAFAFA"/>
+   </Checkbox.Indicator>
   <Checkbox.Label>Framer</Checkbox.Label>
 </Checkbox>
-<Checkbox justifyContent='left'>
+<Checkbox justifyContent='left' size="lg">
   <Checkbox.Indicator>
     <Checkbox.Icon>
       <Icon as={CheckIcon} />
@@ -479,7 +478,7 @@ The Examples section provides visual representations of the different variants o
   </Checkbox.Indicator>
   <Checkbox.Label>Invision Studio</Checkbox.Label>
 </Checkbox>
-<Checkbox justifyContent='left'>
+<Checkbox justifyContent='left' size="lg">
   <Checkbox.Indicator>
     <Checkbox.Icon>
       <Icon as={CheckIcon} />
@@ -508,7 +507,7 @@ The Examples section provides visual representations of the different variants o
       code: `
       <HStack space="md">
      
-<Checkbox>
+<Checkbox size="lg">
   <Checkbox.Indicator>
     <Checkbox.Icon>
         <Icon as={CheckIcon} />
@@ -516,13 +515,13 @@ The Examples section provides visual representations of the different variants o
   </Checkbox.Indicator>
    <Checkbox.Label>Illustration</Checkbox.Label>
 </Checkbox>
-<Checkbox isChecked={true}>
+<Checkbox defaultIsChecked size="lg">
   <Checkbox.Indicator bgColor="#005DB4">
-   <CheckIcon color="white"/>
+   <Icon as={CheckIcon} color="#FAFAFA"/>
   </Checkbox.Indicator>
    <Checkbox.Label>Animation</Checkbox.Label>
 </Checkbox>
-<Checkbox>
+<Checkbox size="lg">
   <Checkbox.Indicator>
     <Checkbox.Icon>
         <Icon as={CheckIcon} />
@@ -555,33 +554,36 @@ The Examples section provides visual representations of the different variants o
     showArgsController={false}
     metaData={{
       code: `
-      <VStack>
-      <HStack>
-<Checkbox >
- <Checkbox.Indicator bgColor="#005DB4">
-      <CheckIcon color="white" />
-    </Checkbox.Indicator>
-   <Checkbox.Label>Design</Checkbox.Label>
-</Checkbox>
-</HStack>
-
-<HStack>
-<Text size="xs" ml="35px">Subscribe to updates from the Design Feed</Text></HStack>
-      <VStack>
-      <HStack>
-<Checkbox >
-  <Checkbox.Indicator>
-   <Checkbox.Icon>
-      <Icon as={CheckIcon} />
-    </Checkbox.Icon>
-  </Checkbox.Indicator>
-   <Checkbox.Label>Marketing</Checkbox.Label>
-</Checkbox>
-</HStack>
-
-<HStack>
-<Text size="xs" ml="35px">Subscribe to updates from the Marketing Feed</Text></HStack></VStack>
-</VStack>
+      <VStack space="md">
+          <VStack> 
+            <HStack>
+              <Checkbox size="lg" defaultIsChecked>
+                <Checkbox.Indicator bgColor="#005DB4" >
+                   <Icon as={CheckIcon} color="#FAFAFA"/>
+                </Checkbox.Indicator>
+                <Checkbox.Label>Design</Checkbox.Label>
+              </Checkbox>
+            </HStack>
+            <HStack >
+              <Text size="sm" ml="35px">Subscribe to updates from the Design Feed</Text>
+            </HStack>
+          </VStack>
+          <VStack >
+            <HStack>
+              <Checkbox size="lg">
+                <Checkbox.Indicator>
+                    <Checkbox.Icon>
+                      <Icon as={CheckIcon}/>
+                    </Checkbox.Icon>
+                </Checkbox.Indicator>
+                <Checkbox.Label>Marketing</Checkbox.Label>
+              </Checkbox>
+            </HStack>
+            <HStack>
+             <Text size="sm" ml="35px">Subscribe to updates from the Marketing Feed</Text>
+            </HStack>
+          </VStack>
+        </VStack>
 `,
       transformCode: (code) => {
         return transformedCode(code);
@@ -610,21 +612,21 @@ The Examples section provides visual representations of the different variants o
       code: `
       <HStack space="md">
 
-<Checkbox  >
+<Checkbox size="lg">
 <Checkbox.Indicator>
     <Checkbox.Icon>
       <Icon as={CheckIcon} />
     </Checkbox.Icon>
   </Checkbox.Indicator>
 </Checkbox>
-<Checkbox>
-  <Checkbox.Indicator bgColor="#005DB4" >
-   <CheckIcon color="white"/>
+<Checkbox size="lg">
+  <Checkbox.Indicator bgColor="#005DB4" borderColor="#005DB4">
+   <Icon as={CheckIcon}  color="#FAFAFA"/>
   </Checkbox.Indicator>
 </Checkbox>
-<Checkbox>
-  <Checkbox.Indicator bgColor="#005DB4">
-   <MinusIcon color="white"/>
+<Checkbox size="lg">
+  <Checkbox.Indicator bgColor="#005DB4" borderColor="#005DB4">
+   <Icon as={MinusIcon}  color="#FAFAFA"/>
   </Checkbox.Indicator>
 </Checkbox>
 </HStack>
@@ -653,49 +655,43 @@ The Examples section provides visual representations of the different variants o
     showArgsController={false}
     metaData={{
       code: `
-<VStack alignItems="center">
-<VStack  alignContent='flex-start'>
-<Text size="lg">Sign up for newsletters</Text>
-
-<Checkbox justifyContent="left">
-  <Checkbox.Indicator>
-    <Checkbox.Icon>
-      <CheckIcon />
-    </Checkbox.Icon>
-  </Checkbox.Indicator>
-  <Checkbox.Label>Daily Bits</Checkbox.Label>
-</Checkbox>
-<Checkbox justifyContent="left">
-  <Checkbox.Indicator>
-    <Checkbox.Icon>
-      <CheckIcon />
-    </Checkbox.Icon>
-  </Checkbox.Indicator>
-  <Checkbox.Label>Event Updates</Checkbox.Label>
-</Checkbox>
-<Checkbox justifyContent="left">
-  <Checkbox.Indicator>
-    <Checkbox.Icon>
-      <CheckIcon />
-    </Checkbox.Icon>
-  </Checkbox.Indicator>
-  <Checkbox.Label>Sponsorhip</Checkbox.Label>
-</Checkbox>
-<Text size="sm" color="#737373">
-  Subscibe to newsletters for updates
-</Text>
-
-</VStack>
-
-</VStack>
+           <VStack  alignContent='flex-start' space="md">
+              <Heading size="sm">Sign up for newsletters</Heading>
+              <Checkbox justifyContent="left" size="md">
+                  <Checkbox.Indicator>
+                    <Checkbox.Icon>
+                      <CheckIcon />
+                    </Checkbox.Icon>
+                  </Checkbox.Indicator>
+                <Checkbox.Label>Daily Bits</Checkbox.Label>
+              </Checkbox>
+              <Checkbox justifyContent="left" size="md">
+                <Checkbox.Indicator>
+                   <Checkbox.Icon>
+                     <CheckIcon />
+                   </Checkbox.Icon>
+               </Checkbox.Indicator>
+                 <Checkbox.Label>Event Updates</Checkbox.Label>
+              </Checkbox>
+              <Checkbox justifyContent="left" size="md">
+                <Checkbox.Indicator>
+                  <Checkbox.Icon>
+                    <CheckIcon />
+                  </Checkbox.Icon>
+                </Checkbox.Indicator>
+                 <Checkbox.Label>Sponsorhip</Checkbox.Label>
+              </Checkbox>
+              <Text size="sm" color="#737373">Subscibe to newsletters for updates</Text>
+           </VStack>
 `,
-      transformCode: (code) => {
-        return transformedCode(code);
-      },
-      scope: { Checkbox, Wrapper, Center, CheckIcon, Icon, Text, VStack },
-      argsType: {},
-    }}
-  />
+transformCode: (code) => {
+return transformedCode(code);
+},
+scope: { Checkbox, Wrapper, Center, CheckIcon, Icon, Text, VStack,Heading },
+argsType: {},
+}}
+/>
+
 </AppProvider>
 
 #### Label left
@@ -707,7 +703,7 @@ The Examples section provides visual representations of the different variants o
     metaData={{
       code: `
 <VStack space="md">
- <Checkbox justifyContent='right'   >
+ <Checkbox justifyContent='right' size="lg">
  <HStack space="lg">
     <Checkbox.Label>Jane Cooper</Checkbox.Label>
      <Checkbox.Indicator>
@@ -719,7 +715,7 @@ The Examples section provides visual representations of the different variants o
  </HStack>
  
 </Checkbox>
- <Checkbox justifyContent='right' isChecked={true} >
+ <Checkbox justifyContent='right' defaultIsChecked size="lg">
  <HStack space="lg">
     <Checkbox.Label>Wade Warren </Checkbox.Label>
      <Checkbox.Indicator bgColor="#005DB4" >
@@ -728,7 +724,7 @@ The Examples section provides visual representations of the different variants o
 
  </HStack>
  </Checkbox>
- <Checkbox justifyContent='right' >
+ <Checkbox justifyContent='right' size="lg">
  <HStack space="lg">
     <Checkbox.Label>Robert Fox</Checkbox.Label>
    <Checkbox.Indicator>
@@ -759,7 +755,7 @@ The Examples section provides visual representations of the different variants o
     showArgsController={false}
     metaData={{
       code: `
- <Checkbox>
+ <Checkbox size="lg">
   <Checkbox.Indicator bgColor="#005DB4">
    <CheckIcon color="white"/>
   </Checkbox.Indicator>
@@ -790,7 +786,7 @@ The Examples section provides visual representations of the different variants o
     showArgsController={false}
     metaData={{
       code: `
- <Checkbox>
+ <Checkbox size="lg">
   <Checkbox.Indicator bgColor="#005DB4">
    <CheckIcon color="white"/>
   </Checkbox.Indicator>
