fix: resolve size issues

--- a/example/storybook/src/components/Feedback/Spinner/index.stories.mdx
+++ b/example/storybook/src/components/Feedback/Spinner/index.stories.mdx
@@ -98,7 +98,7 @@ The Examples section provides visual representations of the different variants o
       code: `
         <HStack space="md" >
       <Spinner size="small"/>
-      <Text  size="md">
+      <Text fontSize="$md"  lineHeight="$lg">
         Please Wait 
       </Text>
       </HStack>
