fix: popover basic example

--- a/example/storybook/src/components/Overlay/Popover/index.stories.mdx
+++ b/example/storybook/src/components/Overlay/Popover/index.stories.mdx
@@ -94,6 +94,7 @@ Following is the default implementation of the **Popover** component without any
         Box,
         Heading,
         Icon,
+        Pressable,
       },
       argsType: {},
     }}
